	this NEWS file. (Suggested by Henrik Bengtsson.)  Package
	index files link to the package DESCRIPTION and NEWS files and
	a list of demos when using dynamic help.

    o	The [ method for class "AsIs" allows the next method to change
	the underlying class.  (Wish of Jens Oehlschlägel.)

    o	write.csv[2] no longer allow 'append' to be changed.
    
    o	The index page for HTML help for a package now collapses
    	multiple signatures for S4 methods into a single entry.

    o	The use of .required by require/detach has been replaced by
	.Depends which is set from the 'Depends' field of a package
	(even in packages with name spaces).  By default detach()
	prevents such dependencies from being detached: this can be
	overridden by the argument 'force'.

    o	bquote() has been extended to work on function definitions
	(wish of PR#14031).

    o	detach() when applied to an object other than a package
	returns the environment that has been detached.

    o	readline() in non-interactive use returns "" and does not
	attempt to read from the 'terminal'.

    o	New function file_ext() in package 'tools'.	


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,