@@ -37,7 +37,7 @@ static void J_bessel(double *x, double *alpha, long *nb,
 double bessel_j(double x, double alpha)
 {
     long nb, ncalc;
-    double *bj;
+    double na, *bj;
 #ifndef MATHLIB_STANDALONE
     char *vmax;
 #endif
@@ -50,13 +50,15 @@ double bessel_j(double x, double alpha)
 	ML_ERROR(ME_RANGE, "bessel_j");
 	return ML_NAN;
     }
+    na = floor(alpha);
     if (alpha < 0) {
 	/* Using Abramowitz & Stegun  9.1.2
 	 * this may not be quite optimal (CPU and accuracy wise) */
 	return(bessel_j(x, -alpha) * cos(M_PI * alpha) +
-	       bessel_y(x, -alpha) * sin(M_PI * alpha));
+	       ((alpha == na) ? 0 :
+	       bessel_y(x, -alpha) * sin(M_PI * alpha)));
     }
-    nb = 1+ (long)floor(alpha);/* nb-1 <= alpha < nb */
+    nb = 1 + (long)na; /* nb-1 <= alpha < nb */
     alpha -= (nb-1);
 #ifdef MATHLIB_STANDALONE
     bj = (double *) calloc(nb, sizeof(double));
